--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ padding-bottom: 1em;
 
    .profile-text {
      float: left;
-     width:50%;
+     width: 50%;
      text-align: center;
      padding: 5% 0% 5% 5%;
      vertical-align: bottom;
@@ -264,9 +264,9 @@ padding-bottom: 1em;
 
    .skill-col {
    float: left;
+   margin: auto;
    width: 50%;
    
-
  }
  
   .col {
@@ -348,8 +348,9 @@ padding-bottom: 1em;
 
 .skill-col {
 	float: left;
-	width: 18%;
+	width: 25%;
 	padding: 1%;
+  margin: auto;
 
 }
 
