--- a/css/styles.css
+++ b/css/styles.css
@@ -229,21 +229,27 @@ padding-bottom: 1em;
    }
 
 
-
+   .profile-area {
+    width: 95%;
+    margin: auto;
+   }
 
    .profile {
      float: right;
-     width: 50%;
-     padding:  0% 5% 5%;
+     width: 45%;
+     /*padding:  0% 5% 5%;*/
+     padding: 0;
+     box-shadow: 5px 10px 8px gray;
 
    }
 
    .profile-text {
      float: left;
-     width: 50%;
+     width: 45%;
      text-align: center;
      padding: 5% 0% 5% 5%;
-     vertical-align: bottom;
+     margin-top: 1em;
+     
 
    }
 
@@ -273,6 +279,7 @@ padding-bottom: 1em;
    float: left;
    width: 50%;
    padding: 1%;
+   
 
  }
 
